--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,6 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "nodemailer": "^7.0.9",
-    "resend": "^6.4.2"
+    "nodemailer": "^7.0.9"
   }
 }
